.metadata/.plugins/org.eclipse.cdt.ui/Gonzalez_AS2.build.log
18:15:05 **** Incremental Build of configuration Debug for project Gonzalez_AS2 ****
make all 
Building file: ../src/as2.cpp
Invoking: GCC C++ Compiler
g++ -I"/home/randygonzalez/Desktop/CS381/Gonzalez_AS2/include" -I"/home/randygonzalez/Desktop/CS381/Gonzalez_AS2/materials" -I/usr/local/include/OGRE/Terrain -I/usr/local/include/OGRE/Overlay -I/usr/include/ois -I/usr/local/include/OGRE -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/as2.d" -MT"src/as2.d" -o "src/as2.o" "../src/as2.cpp"
In file included from /home/randygonzalez/Desktop/CS381/Gonzalez_AS2/include/EntityMgr.h:11:0,
                 from /home/randygonzalez/Desktop/CS381/Gonzalez_AS2/include/as2.h:12,
                 from ../src/as2.cpp:8:
/home/randygonzalez/Desktop/CS381/Gonzalez_AS2/include/Entity381.h:22:20: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11
  bool isSelected = false;
                    ^
../src/as2.cpp: In member function ‘virtual bool AS2::frameRenderingQueued(const Ogre::FrameEvent&)’:
../src/as2.cpp:41:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
../src/as2.cpp: In function ‘int main(int, char**)’:
../src/as2.cpp:84:6: error: cannot declare variable ‘app’ to be of abstract type ‘AS2’
  AS2 app;
      ^
In file included from ../src/as2.cpp:8:0:
/home/randygonzalez/Desktop/CS381/Gonzalez_AS2/include/as2.h:14:7: note:   because the following virtual functions are pure within ‘AS2’:
 class AS2 : public BaseApplication
       ^
In file included from /home/randygonzalez/Desktop/CS381/Gonzalez_AS2/include/as2.h:11:0,
                 from ../src/as2.cpp:8:
/home/randygonzalez/Desktop/CS381/Gonzalez_AS2/include/BaseApplication.h:91:18: note: 	virtual void BaseApplication::createScene()
     virtual void createScene(void) = 0; // Override me!
                  ^
src/subdir.mk:30: recipe for target 'src/as2.o' failed
make: *** [src/as2.o] Error 1

18:15:08 Build Finished (took 2s.768ms)

